--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
+    "favicons": "^6.2.1",
+    "favicons-webpack-plugin": "^5.0.2",
+    "sass-lint": "^1.13.1",
     "webpack-merge": "^5.7.3"
   }
 }
